src/tests/data/SyntaxErrors/WrongIfConstruction.c

#include <stdio.h>

int main()
{
    (0 == 0) if {   // ERROR
        printf("Hello world\n");
    }
	return 0;
}